Fix white spaces in Page Footer

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -296,7 +296,7 @@ th {
 
   & hr {
     inline-size: 1rlh;
-    margin-block: var(--space-huge) 0;
+    margin-block-end: var(--space-rect);
   }
 }
 
